results/experiments/11_90_incorrect/1491/2026-04-29_09-00-16/selection/batfish/candidate_1_vs_candidate_3_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1491/2026-04-29_09-00-16/candidates: candidate_1 vs candidate_3 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=amsterdam [10.0.0.33->100.0.14.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet0/1 with resolved next-hop IP: 10.0.0.56, Routes: [ospfE2 (Network: 100.0.14.0/24, Next Hop: interface FastEthernet0/1 ip 10.0.0.56)]), TRANSMITTED(FastEthernet0/1)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet0/0, Routes: [connected (Network: 100.0.14.0/24, Next Hop: interface FastEthernet0/0)]), TRANSMITTED(FastEthernet0/0), EXITS_NETWORK(Output Interface: FastEthernet0/0, Resolved Next Hop I [...]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]
